<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sign_up_link">Are you new here? Sign up to create an account!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">Sign in</string>
    <string name="name">Name</string>
    <string name="phone">Phone number</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_out_btn">Sign Out</string>

    <string name="toolbar_search">Searching trip…</string>
    <string name="toolbar_create_trip">Creating trip…</string>
    <string name="toolbar_history">History</string>
    <string name="toolbar_account">Account</string>
    <string name="hint_departure">Departure</string>
    <string name="hint_destination">Destination</string>
    <string name="hint_places">Places</string>
    <string name="hint_time">Time</string>
    <string name="create_button">Create</string>
    <string name="hint_comment">Comment</string>
    <string name="hint_price">Price</string>
    <string name="edit_button">Edit</string>
    <string name="change_status">Change status</string>
    <string name="toolbar_my_trip">My Trip</string>
    <string name="cancel_button">Cancel</string>
    <string name="hint_status">Status</string>
    <string name="save_button">Save</string>
    <string name="status_start">Start</string>
    <string name="status_reopen">Reopen</string>
    <string name="status_finish">Finish</string>
    <string name="status_waiting">Waiting</string>
    <string name="status_started">Started</string>
    <string name="status_finished">Finished</string>
    <string name="join_button">Join</string>
    <string name="app_name">Trip Fellows</string>
    <string name="join">Join</string>
    <string name="price">price</string>
    <string name="places">places</string>
    <string name="start_time">startTime</string>
    <string name="destination_address">destinationAddress</string>
    <string name="departure_address">departureAddress</string>
    <string name="tripDepartureKey">Departure: </string>
    <string name="tripDestinationKey">Destination: </string>
    <string name="tripStartTimeKey">Start date: </string>
    <string name="tripPlacesKey">Free places: </string>
    <string name="tripPriceKey">Price: </string>
    <string name="tripDriverKey">Driver:</string>
    <string name="get_out_text">Get Out</string>
    <string name="ok">OK</string>
    <string name="tripStatusKey">Status:</string>
    <string name="settings">Settings</string>
    <string name="myAccount">About you</string>
    <string name="accountName">Name</string>
    <string name="create_trip_string">You doesn\'t have current trip now! Join some or create your own!</string>
    <string name="my_trip_string">You already have joined some trip! Go to MyTrip section to see it!</string>
    <string name="back">Back</string>
    <string name="invalide_email">Please enter valid email</string>
    <string name="invalide_password">Please enter valid password</string>
    <string name="invalide_name">Please enter valid name</string>
    <string name="invalide_number_phone">Please enter valid mobile number</string>
    <string name="invalide_field">Please fill in this field</string>
    <string name="invalide_field_num">Choose the number of seats from 1 to 5</string>
    <string name="noConnection">There is no Internet connection currently on device. Try to reload or change internet settings</string>
    <string name="reload">Reload</string>
    <string name="pushesSettingText">Enable pushes</string>
    <string name="passengers">Passengers</string>
</resources>