<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_trip_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/colorLight"
    android:orientation="vertical"
    android:gravity="top|center">

    <EditText
        android:id="@+id/departure_address"
        style="@style/TextViewBigStyle"
        android:hint="@string/hint_departure"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/destination_address"
        style="@style/TextViewBigStyle"
        android:hint="@string/hint_destination"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:autofillHints="" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/places"
            style="@style/TextViewSmallStyle"
            android:autofillHints=""
            android:hint="@string/hint_places"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/start_time"
            style="@style/TextViewSmallStyle"
            android:autofillHints=""
            android:hint="@string/hint_time"
            android:inputType="time"
            android:layout_marginStart="10dp"/>
    </TableRow>

    <EditText
        android:id="@+id/price"
        style="@style/TextViewSmallStyle"
        android:autofillHints=""
        android:hint="@string/hint_price"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/comment"
        style="@style/TextViewBigStyle"
        android:hint="@string/hint_comment"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:maxLines="3"
        android:autofillHints="" />

    <Button
        android:id="@+id/save_button"
        style="@style/BigOrangeButtonStyle"
        android:layout_marginTop="10dp"
        android:text="@string/save_button"
        android:textColor="@color/colorLight">
    </Button>
</LinearLayout>