<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"

    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <EditText
        android:id="@+id/sign_up_username"
        style="@style/AuthTextViewStyle"
        android:hint="@string/username"
        android:autofillHints=""
        android:layout_marginBottom="40dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/sign_up_password"
        style="@style/AuthTextViewStyle"
        android:hint="@string/password"
        android:autofillHints=""
        android:layout_marginBottom="40dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/sign_up_name"
        style="@style/AuthTextViewStyle"
        android:hint="@string/name"
        android:autofillHints=""
        android:layout_marginBottom="40dp"
        android:inputType="text" />
    
    <EditText
        android:id="@+id/sign_up_phone"
        style="@style/AuthTextViewStyle"
        android:hint="@string/phone"
        android:autofillHints=""
        android:layout_marginBottom="40dp"
        android:inputType="phone" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/sign_up_btn"/>
</LinearLayout>