<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_trip_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/colorLightGray"
    android:orientation="vertical"
    android:gravity="top|center">

    <EditText
        android:id="@+id/price"
        style="@style/TextViewBigStyle"
        android:layout_width="290dp"
        android:background="@drawable/layout_bg"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="88dp"
        android:autofillHints=""
        android:hint="@string/hint_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_time"
        />

    <EditText
        android:id="@+id/comment"
        style="@style/TextViewBigStyle"
        android:layout_width="290dp"
        android:background="@drawable/layout_bg"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/hint_comment"
        android:inputType="text"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <Button
        android:id="@+id/create_button"
        style="@style/RoundedCornerButton"
        android:layout_width="174dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/btn_green"
        android:text="@string/create_button"
        android:textColor="@color/colorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment"
        app:layout_constraintVertical_bias="1.0"/>

    <EditText
        android:id="@+id/departure_address"
        style="@style/TextViewBigStyle"
        android:background="@drawable/layout_bg"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:hint="@string/hint_departure"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/places"
        style="@style/TextViewSmallStyle"
        android:layout_width="140dp"
        android:background="@drawable/layout_bg"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/hint_places"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination_address" />

    <EditText
        android:id="@+id/destination_address"
        style="@style/TextViewBigStyle"
        android:layout_width="290dp"
        android:background="@drawable/layout_bg"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:hint="@string/hint_destination"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departure_address" />

    <TextView
        android:id="@+id/start_time"
        style="@style/TextViewSmallStyle"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="79dp"
        android:autofillHints=""
        android:background="@drawable/layout_bg"
        android:hint="@string/hint_time"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/places"
        app:layout_constraintTop_toBottomOf="@+id/destination_address" />

    <Button
        android:id="@+id/destination_location_button"
        style="@style/LocationButtonStyle"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/destination_address"
        app:layout_constraintTop_toBottomOf="@+id/departure_location_button" />

    <Button
        android:id="@+id/departure_location_button"
        style="@style/LocationButtonStyle"
        android:layout_width="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/departure_address"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>